--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
     "franc": "^6.2.0",
     "gtts": "^0.2.1",
